Refine some content

--- a/commutative/week10.tex
+++ b/commutative/week10.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{The equivalence of algebra and geometry}
+\subsection{The equivalence of algebra and geometry (week 10)}
 
 In the following, $k$ will be an algebraically closed field.
 \begin{definition}
@@ -146,8 +146,9 @@ The one-one correspondence is given by
   $\Ic(\Vc(I)) = \sqrt{I}$
 
   \begin{proof}
-    ``$\supset$'': If $f^n \in I$, then $f(\alpha) = 0, \forall \alpha \in \Vc(I)
-    \implies f^n(\alpha) = 0, \forall \alpha \in \Vc(I)$, thus $f^n \in \Ic(\Vc(I))$.
+    ``$\supset$'': $f \in \sqrt{I} \implies f^n \in I$, then
+    $f^n(\alpha) = 0, \forall \alpha \in \Vc(I)
+    \implies f(\alpha) = 0, \forall \alpha \in \Vc(I)$, thus $f \in \Ic(\Vc(I))$.
 
     ``$\subset$'': If $\Ic(\Vc(I)) = 0$, then $I \subseteq \sqrt{I} \subseteq \Ic(\Vc(I)) = 0$,
     thus $I = 0$.
