--- a/commutative/week13.tex
+++ b/commutative/week13.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Artinian rings and DVR}
+\subsection{Artinian rings and DVR (week 13)}
 \subsubsection{Artinian rings}
 
 \begin{definition}
@@ -36,7 +36,7 @@
     \item $\abs{\Max R} < \infty$.
       \begin{proof}
         Consider the set $\Set*{ \bigcap\limits_{\text{finite}} \mf \given \mf \in \Max R}
-        \ne \emptyset$. So there exists a minimal element in this set ($R$ is Artinian),
+        \ne \varnothing$. So there exists a minimal element in this set ($R$ is Artinian),
         say $\mf_1 \cap \dots \cap \mf_k$.  Now, for $\mf \in \Max R$, we have
         $\mf\cap \mf_1\cap \dots \cap\mf_k = \mf_1\cap \dots \cap\mf_k$ since the
         latter is minimal $\implies \mf \supseteq \mf_1\cap \dots\cap\mf_k
