--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -1,7 +1,7 @@
 %! TEX root=../main.tex
 \section{Fields}
 
-\subsection{Algebraic extensions}
+\subsection{Algebraic extensions (week 1)}
 
 \begin{definition} \hfill
   \begin{itemize}
