--- a/fields/week2.tex
+++ b/fields/week2.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Finite field}
+\subsection{Finite field (week 2)}
 
 \begin{definition}
   A polynomial $f(x) \in K[x]$ is said to be \emph{separable}\index{seperable}
