--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Algebra closure}
+\subsection{Algebra closure (week 3)}
 
 \begin{definition} \hfill
   \begin{itemize}
