--- a/fields/week4.tex
+++ b/fields/week4.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Normal extension}
+\subsection{Normal extension (week 4)}
 
 \begin{definition}
   $\quot{L}{K}$ is called a {\bf normal extension}\index{Field extension!normal extension}
