--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Abelian extension}
+\subsection{Abelian extension (week 5)}
 
 \begin{definition}
   $L/K$ is called an abelian extension if $L/K$ is Galois and $\Gal(L/K)$ is abelian.
