--- a/fields/week6.tex
+++ b/fields/week6.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Solution by radicals}
+\subsection{Solution by radicals (week 6)}
 
 \begin{definition} \mbox{}
   \begin{enumerate}
