--- a/fields/week7.tex
+++ b/fields/week7.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Calculation of Galois groups}
+\subsection{Calculation of Galois groups (week 7)}
 Let $f(x)$ be separable in $K[x]$ and $L = K(\alpha_1, \dots, \alpha_n)$ be a splitting field of
 $f$ over $K$. The goal is to find $\Gal(L/K)$ which is in $S_n$.
 
