--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -1,5 +1,5 @@
 %! TEX root=../main.tex
-\subsection{Transcendental extensions}
+\subsection{Transcendental extensions (week 8)}
 
 \begin{definition}
   Let $L/K$ be an extension and $S \subset L$.
