--- a/group/week1.tex
+++ b/group/week1.tex
@@ -42,7 +42,7 @@ CONCON
 \end{exercise}
 
 \begin{definition}
-  Let $G$ be a group and $H \subseteq G, H \ne \phi$.
+  Let $G$ be a group and $H \subseteq G, H \ne \varnothing$.
   Then $H$ is said to be a subgroup of $G$, denoted by $H \le G$, if
   \begin{enumerate}
     \item $\forall a, b \in H, ab \in H$.
@@ -57,7 +57,7 @@ CONCON
         $a b^{-1} \in H$.
       \item[$\Leftarrow$]
         \begin{enumerate}
-          \item $H \ne \phi \implies \exists a \in H \implies
+          \item $H \ne \varnothing \implies \exists a \in H \implies
             aa^{-1} = 1 \in H$.
           \item $1, a \in H \implies 1 a^{-1} = a^{-1} \in H$.
           \item $a, b^{-1} \in H \implies a (b^{-1})^{-1} = ab \in H$.
