--- a/group/week3.tex
+++ b/group/week3.tex
@@ -28,7 +28,7 @@ Notice that $\Image f \le G_2$.
 
 \begin{fact} \mbox{}
   \begin{enumerate}
-    \item For 2 right cosets $Ha, Hb$, either $Ha = Hb$ or $Ha \cap Hb = \phi$
+    \item For 2 right cosets $Ha, Hb$, either $Ha = Hb$ or $Ha \cap Hb = \varnothing$
       must hold.
     \item $\{\, Ha : a\in G \,\}$ forms a partition of $G$.
   \end{enumerate}
