--- a/group/week8.tex
+++ b/group/week8.tex
@@ -238,7 +238,7 @@
 
 \begin{theorem}[Sylow \RNum{1}]
   $\forall 0 \le k \le \alpha$, $\exists H \le G$ s.t. $\abs{H} = p^k$.
-  In particular, $\text{Syl}_p(G) \ne \phi$.
+  In particular, $\text{Syl}_p(G) \ne \varnothing$.
 
   \begin{proof}
     By induction on $\abs{G}$. If $\abs{G} = 1$, then $k = 0$, $H = \{1\}$.
