--- a/homology/week14.tex
+++ b/homology/week14.tex
@@ -1,7 +1,7 @@
 %! TEX root=../main.tex
 \section{Introduction to Homological Algebra}
 
-\subsection{Projective, Injective and Flat modules}
+\subsection{Projective, Injective and Flat modules (week 14)}
 
 \begin{definition} \mbox{}
   \begin{itemize}
