--- a/hw/week8.tex
+++ b/hw/week8.tex
@@ -4,7 +4,7 @@
 
 \begin{exercise} 
   Use Zorn's lemma to show the existence of a transcendence base $S$ of any 
-  extension $L/K$. ($S$ may equal to $\emptyset$)
+  extension $L/K$. ($S$ may equal to $\varnothing$)
 \end{exercise}
 
 \begin{exercise}
