Update hw week13

--- a/hw/week13.tex
+++ b/hw/week13.tex
@@ -22,6 +22,11 @@
   \[ \bigcap\limits_{n=0}^{\infty} \mf^n = \gen{0}. \]
 \end{exercise}
 
+\begin{definition}
+  Let $R$ be an integral domain and $I, J \subseteq R$.
+  We say $I \mid J$ if $\exists I' \subseteq R$ s.t. $II' = J$ (so $J \subseteq I$)
+\end{definition}
+
 \begin{exercise}
   Let $R$ be a Dedekind domain, $I, J \subseteq R$ and
   $\begin{cases}
