Update hw week13

--- a/hw/week13.tex
+++ b/hw/week13.tex
@@ -11,7 +11,7 @@
   Let $R$ be an Artinian local ring with maximal ideal $\mf$, 
   then TFAE:
   \begin{enumerate}
-    \item $R$ is a PID
+    \item $R$ is a PIR
     \item $\mf$ is principal
     \item $\dim_{R/\mf} \left( \mf/\mf^2 \right) \leq 1$
   \end{enumerate}
