--- a/main.tex
+++ b/main.tex
@@ -351,6 +351,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
+\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -378,6 +379,7 @@
 \include{commutative/week2}
 \include{commutative/week3}
 \include{commutative/week4}
+\fi
 \include{commutative/week5}
 
 \printindex
