--- a/main.tex
+++ b/main.tex
@@ -352,6 +352,7 @@
 % \thispagestyle{fancy}
 % \tableofcontents
 %%%%%%%%%%%%%include file here%%%%%%%%%%%%%%%
+%\iffalse
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
@@ -379,6 +380,7 @@
 \include{commutative/week10}
 \include{commutative/week11}
 \include{commutative/week12}
+%\fi
 \include{commutative/week13}
 \include{homology/week14}
 \printindex
