--- a/commutative/week13.tex
+++ b/commutative/week13.tex
@@ -232,22 +232,98 @@ $\mf_1\mf_2 \dotsm \mf_n = 0$. Then $R$ is Artinian $\iff$ $R$ is Noetherian.
     \item The valuation ring of $\nu$ is $R = \Set{x \in K \given \nu(x) \ge 0}$,
       called a DVR.
       \begin{itemize}
+        \item Fact \\
+          $\nu(1) = 0$ : $\nu(1) = \nu(1) + \nu(1) \implies \nu(1) = 0$ \\
+          $\nu(x) = -\nu(x^{-1})$ : $0 = \nu(xx^{-1}) = \nu(x) + \nu(x^{-1})$
         \item $\mf = \Set{x \in R \given \nu(x) > 0}$ is the unique maximal ideal
           in $R$ since $\nu(x) = 0 \iff x$ is a unit.
-          % TODO
-        \item Let $t \in R$ with $\nu(t) = 1$, then $\mf = \gen{t}$.
-          % TODO
+          \begin{proof} $ $\\
+            $"\Rightarrow"$
+              $\nu(x) = 0 \leadsto \nu(x^{-1}) = 0 \leadsto x^{-1} \in R$ \\
+            $"\Leftarrow"$
+              $\nu(x^{-1}),\nu(x) \ge 0.$ And, $\nu(x) = -\nu(x) \le 0 \leadsto 
+              \nu(x) = 0$
+          \end{proof}
+        \item Let $t \in R$ with $\nu(t) = 1$, then $\mf = \gen{t}$.\\
+          $\forall x \in \mf, \nu(x) = k > 0. \leadsto \nu(x(t^k)^-1) = 
+          \nu(x) - k\nu(t) = 0 \leadsto x = t^ku$, $u$ is unit in R.
         \item Let $I \subseteq \mf$ and define
           $m = \min\Set{l \in \Nb \given x = t^l u \quad \forall x \in I}$.
-          Then $I = \gen{t^m}$.
+          Then $I = \gen{t^m}$.\\
       \end{itemize}
   \end{enumerate}
 \end{definition}
+\iffalse
+\begin{prop} \label{local-neotherian-ring-set-gen-max-gen-qoetient-max}
+  Let R be a local Noetherian ring with maximal ideal $\mf$. Then $t_1, \cdots t_n
+  \in \mf$ generate $\mf$ if and only if thier images generate $\mf / \mf^2$ as an
+  $R/\mf$ vector space.
+  \begin{proof} $ $ \\
+    The $"\Rightarrow"$ is simple. \\
+    $"\Leftarrow"$ \\
+    Let $N = \gen{t_1, \cdots , t_n} \subseteq \mf$ and images of $t_1, \cdots, t_n
+    \in \mf / \mf^2$ generate $\mf / \mf^2$ as $R/\mf$-vector space, then we have
+    $$
+      N+\mf^2 = \mf + \mf^2 \implies (N + \mf^2) / N = (\mf + \mf^2) / N
+      \implies \mf(\mf/N) = \mf / N
+    $$
+    where we have used $N/N = 0$ and $\mf + \mf^2 = \mf$. By Nakayama's lemma, $M =
+     \mf / N$ is zero module, so $\mf = N$ and $t_1, \cdots, t_n$ generate $\mf$.
+  \end{proof}
+\end{prop}
+\fi
 
 \begin{prop}
   $R$ is a DVR $\iff$ $R$ is 1-dimensional normal, Noetherian local domain.
-  \begin{proof}
-    % TODO
+  \begin{proof} $ $ \\
+    $"\Rightarrow"$ \\
+    $$
+      \begin{aligned}
+        DVR \implies PID &\implies UFD \implies normal \\
+        &\implies Neotherian
+      \end{aligned}
+    $$
+    $\forall P \neq 0 \in \Spec R$, $P = <t^k> = m^k$ for some $k \in \Nb$
+    $\leadsto P = \sqrt{P} = \sqrt{m^k} = m \leadsto P = m \leadsto
+    \gen{0} \subset m \leadsto \dim R = 1$ \\
+    $"\Leftarrow"$
+    \begin{itemize}
+      \item $\mf \ne \mf^2$ : \\
+        If $\mf = \mf^2$ and $\mf = Jac R$, then $m = \gen{0}$ by Nakayama lemma,
+        a contradiction to $\dim R = 1$.
+      \item Let $t \in \mf - \mf^2$ and $\mf = \gen{t}$ \\
+        Consider $M = \mf / <t>$ and assume $M \neq 0$ \\
+        \underline{Fact} $I = ann(\bar{x})\ \bar{x} \in M \implies I \in \Spec R$
+        Since $ab \in I,\ a,b \notin I$, then $\bar{a}\bar{b}\bar{x} = 0$, 
+        and $\bar{b}\bar{x} \neq 0$. \\
+        Suppose I is max, $ann(\bar{b}\bar{x}) \supseteq ann(\bar{x})
+        \leadsto ann(\bar{b}\bar{x}) = ann(\bar{x})$ Then, $a \in ann(\bar{b}\bar{x})
+        = ann(\bar{x})$, a contradiction. \\
+        By Fact, $\exists \bar{x} \neq 0 \in M$ s.t. $ann(\bar{x}) = \mf \leadsto
+        x\mf = \gen{t} = tR \leadsto \frac{x}{t}\mf \subseteq R$. \\
+        (1) If $\frac{x}{t} = R \leadsto \frac{xy}{t} = 1$ for some $y \in \mf
+        \leadsto t = xy \in \mf$, a contratiction. \\
+        (2) If $\frac{x}{t} \subset \mf$, let $\mf = \gen{y_1,\cdots, y_n}_R$ Write
+        $\frac{x}{t} y_i = \sum\limits_{j = 1}^{l} a_{ij}y_j \forall i = 1, \cdots,
+        l$ By using determinat trick, we have $\frac{x}{t}$ is integral over R, but 
+        R is normal $\leadsto \frac{x}{t} \in R \leadsto x \in \gen{t} \leadsto 
+        \bar{x} = \bar{0}$, a contradiction. \\
+        Therefore, $\mf = \gen{t}$.
+      \item By Ex3, $\bigcap\limits_{n = 0}^{\infty} m^n = 0$. Thus, $\forall x \in R$,
+        $\exists! k$ s.t. $x \in m^k$ and $x \notin m^k+1$. $\leadsto x = t^ku$,
+        u is units.
+      \item Define $\nu(x) = k$ and $\forall \frac{x}{y} \in \Frac{R} 
+        \nu(\frac{x}{y}) = \nu(x) - \nu{y}$. \\
+        (1) $\frac{x}{y} = \frac{x'}{y'} \leadsto xy' = x'y \leadsto \nu(xy') = 
+        \nu(x'y)$. \\
+        (2) $\nu(\frac{a}{b} \frac{c}{d}) = \nu(ac) - \nu(bd) = \big[\nu(a) - 
+        \nu(b)\big] - \big[\nu(c) - \nu(d)\big] = \nu(\frac{a}{b}) - \nu(\frac{c}{d})$ \\
+        (3) $\nu(\frac{a}{b} + \frac{c}{d})$, $\nu(a) = v_a$, $\nu(b) = v_b$,
+        $\nu(c) = v_c$,$\nu(d) = v_d$. $\nu{\frac{a}{b} + \frac{c}{d}} = 
+        min\big\{\nu(\frac{a}{b}), \nu(\frac{c}{d})\big\} = min\big\{\nu(\frac{ad}{bd}), 
+        \nu(\frac{bc}{bd})\big\} = \nu(\frac{ad + bd}{bd})$. \\
+    \end{itemize}
+    Therefore, R is DVR.
   \end{proof}
 \end{prop}
 
